--- a/Tungsten/Tungsten Interpreter.csproj
+++ b/Tungsten/Tungsten Interpreter.csproj
@@ -2,10 +2,16 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows7.0</TargetFramework>
     <RootNamespace>Tungsten_Interpreter</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ApplicationIcon>TungstenLogo.ico</ApplicationIcon>
+    <BaseOutputPath>Interpreter\</BaseOutputPath>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="TungstenLogo.ico" />
+  </ItemGroup>
 
 </Project>
