--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,4 +21,4 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Build
-      run: dotnet build Tungsten/Tungsten%20Interpreter.csproj --configuration Release --no-restore
+      run: dotnet build Tungsten/Tungsten_Interpreter.csproj --configuration Release --no-restore
