--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore Dependencies
-      run: dotnet restore
+      run: dotnet restore Tungsten/TungstenInterpreter.csproj
     - name: Build
       run: dotnet build Tungsten/TungstenInterpreter.csproj --configuration Release --no-restore
